# MindToEye

./: .env.development  .env.supabase  .replit  .replit.workflow.flask  .replit.workflow.flask-api  .replit.workflow.flask-api.json  .replit.workflow.flask-api.toml  .replit.workflow.flask.toml  .replit.workflow.flask2.json  .replit.workflow.flask_api_server.json  README.md  ai_helpers.py  app.py  check-connection-strings.js  check-db.js  config.py  create-supabase-tables.js  create-tables.js  execute-migration.js  migrate-auth-id.js  migration_status.md  package-lock.json  package.json  pyproject.toml  routes.py  run-migrate-isDemo.js  run-supabase-migration.js  run_flask.py  run_flask_server.sh  schema.py  setup-local-db.js  setup-replit-db.js  setup-supabase-direct.js  setup-supabase.js  simple_flask_test.py  storage.py  supabase-schema.sql  supabase-tables.sql  supabase_setup.sql  supabase_tables.sql  (+8 more)
attached_assets/: Pasted-MindToEye-Dashboard-Projects-Templates-Resources-View-notifications-Open-user-menuUser-profile-New-P-1741778462300.txt  Pasted-MindToEye-Dashboard-Projects-Templates-Resources-View-notifications-Open-user-menuUser-profile-New-P-1741779012064.txt  Pasted-MindToEye-Dashboard-Projects-Templates-Resources-View-notifications-Open-user-menuUser-profile-New-P-1741784442641.txt  Pasted-Proposed-names-ConceptGlow-MindToEye-RevealReady-ApprovalEngine-AhaMaker-ClarityForge-PitchIQ-Pi-1742809230315.txt  index.html
client/: index.html  landing-page.html
migrations/: 0001_initial_schema.sql  migrate.ts
server/: check-storage-policy.ts  create-tables.ts  (+21 more)
(+39 files in other folders)
